--- a/Python_functions_day1.ipynb
+++ b/Python_functions_day1.ipynb
@@ -16,12 +16,29 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "mxTbot0JMRpv"
+        "id": "mxTbot0JMRpv",
+        "outputId": "9eb1c567-a681-479f-f5e7-a7e3d45726bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25\n"
+          ]
+        }
+      ],
+      "source": [
+        "a=12\n",
+        "b=13\n",
+        "Sum = a+b;\n",
+        "print(Sum);"
+      ]
     }
   ]
 }
