--- a/Python_functions_day1.ipynb
+++ b/Python_functions_day1.ipynb
@@ -16,28 +16,52 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "source": [
+        "print(\"Hello Python\")"
+      ],
       "metadata": {
-        "id": "mxTbot0JMRpv",
-        "outputId": "9eb1c567-a681-479f-f5e7-a7e3d45726bd",
+        "id": "qpXTQ68omQwa",
+        "outputId": "1ec63004-0f4d-4692-f64e-0018c67af00f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "25\n"
+            "Hello Python\n"
           ]
         }
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "a=12\n",
-        "b=13\n",
-        "Sum = a+b;\n",
-        "print(Sum);"
+        "def SayHi():\n",
+        "  print(\"Hello World\")\n",
+        "  print(\"Python\")\n",
+        "\n",
+        "fun()"
+      ],
+      "metadata": {
+        "id": "sg6kBKkBvBW-",
+        "outputId": "cb3112ff-5282-4a22-8cfe-66afaa4d2c71",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Python\n"
+          ]
+        }
       ]
     }
   ]
