--- a/Python_functions_day1.ipynb
+++ b/Python_functions_day1.ipynb
@@ -72,30 +72,44 @@
     {
       "cell_type": "code",
       "source": [
-        "def fun1_square():     #without argument and no return value\n",
-        "  x = int(input(\"input the numberONE\"))\n",
+        "#without argument and no return value\n",
+        "def fun1_square():\n",
+        "  x = int(input(\"input the number\"))\n",
         "  print(x*x)\n",
         "\n",
         "fun1_square()"
       ],
       "metadata": {
-        "id": "xG0yWNmVxy8C",
-        "outputId": "62b5c4b9-209a-417e-f6e0-859b243e5f4e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xG0yWNmVxy8C",
+        "outputId": "dfb91054-7bb5-4e0f-dffb-e1d998959b73"
       },
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "input the numberONE44\n",
-            "1936\n"
+            "input the number33\n",
+            "1089\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#without argument and has return value\n",
+        "def fun1_square()\n",
+        "x = int(input(\"input the number\"))\n"
+      ],
+      "metadata": {
+        "id": "fZ2dhB0r8ZiZ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
