--- a/Python_functions_day1.ipynb
+++ b/Python_functions_day1.ipynb
@@ -72,7 +72,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#without argument and no return value\n",
+        "#Function without argument and no Return value\n",
         "def fun1_square():\n",
         "  x = int(input(\"input the number\"))\n",
         "  print(x*x)\n",
@@ -101,12 +101,40 @@
     {
       "cell_type": "code",
       "source": [
-        "#without argument and has return value\n",
-        "def fun1_square()\n",
-        "x = int(input(\"input the number\"))\n"
+        "#Function without Argument and has Return value\n",
+        "def fun1_square():\n",
+        "  x = int(input(\"input the number\"))\n",
+        "  return x*x\n",
+        "\n",
+        "RESULT = fun1_square()\n",
+        "print(RESULT)\n"
       ],
       "metadata": {
-        "id": "fZ2dhB0r8ZiZ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fZ2dhB0r8ZiZ",
+        "outputId": "e0120931-da23-4003-ab18-40e180f72fb5"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "input the number12\n",
+            "144\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Function with Argument and no Return value\n"
+      ],
+      "metadata": {
+        "id": "t7eevs5F_DBM"
       },
       "execution_count": null,
       "outputs": []
