--- a/Python_functions_day1.ipynb
+++ b/Python_functions_day1.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/PavanKVarmaY/PythonTutorial/blob/main/Python_functions_day1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "source": [
@@ -26,7 +37,7 @@
         "id": "qpXTQ68omQwa",
         "outputId": "1ec63004-0f4d-4692-f64e-0018c67af00f"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,7 +66,7 @@
         "id": "sg6kBKkBvBW-",
         "outputId": "9c48a424-0efc-479e-8185-c986264243aa"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +97,7 @@
         "id": "xG0yWNmVxy8C",
         "outputId": "dfb91054-7bb5-4e0f-dffb-e1d998959b73"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +127,7 @@
         "id": "fZ2dhB0r8ZiZ",
         "outputId": "e0120931-da23-4003-ab18-40e180f72fb5"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
