--- a/Python_functions_day1.ipynb
+++ b/Python_functions_day1.ipynb
@@ -142,7 +142,23 @@
     {
       "cell_type": "code",
       "source": [
-        "#Function with Argument and no Return value\n"
+        "MyName = \"My name is MPavan Kumar Yarramsetti\"\n",
+        "MyJob = \"I am test Manager\"\n",
+        "MyAge = '35'\n",
+        "#print(MyName.upper())\n",
+        "#print(MyName[:16].upper())\n",
+        "#print(f\"{MyName[11:16]}'s Job is {MyJob[10:]}\")\n",
+        "#Age= print(type(MyAge))\n",
+        "#print(type(int(MyAge)))\n",
+        "#print(int(MyAge)-30)\n",
+        "#print(float(MyAge))\n",
+        "#print(MyName.find(\"M\"))\n",
+        "\n",
+        "\"\"\" capture_FName = input(\"Enter the First Name \")\n",
+        "capture_LName = input(\"Enter the Last Name \")\n",
+        "print(capture_FName + \" \" + capture_LName) \"\"\"\n",
+        "\n",
+        "print(\"H\" * 10)"
       ],
       "metadata": {
         "id": "t7eevs5F_DBM"
